// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`call to action snapshot Call to action: 0 1`] = `
<a
  className="button-0-1-16 button_primary-0-1-17 callToAction-0-1-5"
  data-sketch-symbol="Call to action - primary"
  href="https://www.microsoft.com/en-us/"
>
  <span
    className="button_textContainer-0-1-6"
  >
    Primary call to action
  </span>
  <div
    className="glyph-0-1-7"
    dangerouslySetInnerHTML={
      Object {
        "__html": "FOO",
      }
    }
  />
</a>
`;

exports[`call to action snapshot Call to action: 1 1`] = `
<a
  className="button-0-1-38 button_lightweight-0-1-41 callToAction-0-1-27"
  data-sketch-symbol="Call to action - lightweight"
  href="https://www.microsoft.com/en-us/"
>
  <span
    className="button_textContainer-0-1-43"
  >
    Lightweight call to action
    <div
      className="glyph-0-1-29"
      dangerouslySetInnerHTML={
        Object {
          "__html": "FOO",
        }
      }
    />
  </span>
</a>
`;

exports[`call to action snapshot Call to action: 2 1`] = `
<a
  className="button-0-1-60 button_justified-0-1-64 callToAction-0-1-49"
  data-sketch-symbol="Call to action - justified"
  href="https://www.microsoft.com/en-us/"
>
  <span
    className="button_textContainer-0-1-65"
  >
    Secondary call to action
    <div
      className="glyph-0-1-51"
      dangerouslySetInnerHTML={
        Object {
          "__html": "FOO",
        }
      }
    />
  </span>
</a>
`;
